--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,170 +1,273 @@
 .header__inner {
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 40px 130px 36px 130px;
-	background-color: $color-beige;
-	transition: padding 0.3s, background-color 0.3s;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 130px 36px 130px;
+  background-color: $color-beige;
+  transition: padding 0.3s, background-color 0.3s;
 
-	&--sticky {
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		padding: 10px 130px;
-		background-color: rgba($color-beige, 0.9);
-		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-		z-index: 1000;
-		animation-name: header;
-		animation-duration: 0.4s;
-	}
+  &--sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 10px 130px;
+    background-color: rgba($color-beige, 0.9);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    animation-name: header;
+    animation-duration: 0.4s;
+  }
 
-	.header__content {
-		display: flex;
-		align-items: center;
-		gap: 58px;
-	}
+  .header__content {
+    display: flex;
+    align-items: center;
+    gap: 58px;
+  }
 }
 
 .logo {
-	display: flex;
-	align-items: center;
-	gap: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 
-	&__img {
-		max-width: 68px;
-		height: 60px;
-	}
+  &__img {
+    max-width: 68px;
+    height: 60px;
+  }
 }
 
 .logo__text {
-	display: flex;
-	flex-direction: column;
-	gap: 6px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 
-	&-name {
-		color: $color-black;
-		font-weight: 700;
-		font-size: 20px;
-	}
+  &-name {
+    color: $color-black;
+    font-weight: 700;
+    font-size: 20px;
+  }
 
-	&-description {
-		font-size: 18px;
-		opacity: 0.6;
-		color: $color-black;
-	}
+  &-description {
+    font-size: 18px;
+    opacity: 0.6;
+    color: $color-black;
+  }
 }
 
 .nav {
-	&__list {
-		display: flex;
-		align-items: center;
-		gap: 50px;
+  &__list {
+    display: flex;
+    align-items: center;
+    gap: 50px;
 
-		&-item {
-			cursor: pointer;
-		}
+    &-item {
+      cursor: pointer;
+    }
 
-		&-item:nth-of-type(3) {
-			animation: pulse-wave 1.5s infinite;
-		}
+    &-item:nth-of-type(3) {
+      animation: pulse-wave 1.5s infinite;
+    }
 
-		&-link {
-			color: $color-black;
-			border-bottom-width: 2px;
-			@include hover-link;
+    &-link {
+      color: $color-black;
+      border-bottom-width: 2px;
+      @include hover-link;
 
-			&--active {
-				font-weight: 700;
-			}
-		}
+      &--active {
+        font-weight: 700;
+      }
+    }
 
-		.fa-solid {
-			font-size: 10px;
-		}
-	}
+    .fa-solid {
+      font-size: 10px;
+    }
+  }
 }
 
 // Dropdown
 
 .nav__list-item {
-	position: relative;
+  position: relative;
 }
 
 .dropdown {
-	display: none;
-	background-color: $color-light;
-	position: absolute;
-	top: 50px;
-	right: 20px;
-	border-radius: 6px;
-	width: 612px;
-	height: 292px;
-	z-index: 300;
-	transition: box-shadow 0.2s ease-in-out;
-	&:hover {
-		box-shadow: 0 0 10px 6px rgba($color-beige, 0.8);
-	}
+  display: none;
+  background-color: $color-light;
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  border-radius: 6px;
+  width: 612px;
+  height: 292px;
+  z-index: 300;
+  transition: box-shadow 0.2s ease-in-out;
+  &:hover {
+    box-shadow: 0 0 10px 6px rgba($color-beige, 0.8);
+  }
 
-	&__list {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(4, 1fr);
-		gap: 20px;
-		padding: 20px 40px;
-	}
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+    padding: 20px 40px;
+  }
 
-	&__list-title {
-		font-weight: 700;
-		&--active {
-			color: $color-green;
-		}
-	}
+  &__list-title {
+    font-weight: 700;
+    &--active {
+      color: $color-green;
+    }
+  }
 
-	&__list-description {
-		font-size: 18px;
-	}
+  &__list-description {
+    font-size: 18px;
+  }
 }
 
 // Pulse Wave
 
 @keyframes pulse-wave {
-	0% {
-		box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5),
-			0 0 0 10px rgba($color-beige, 0.4),
-			0 0 0 20px rgba($color-yellow-light, 0.3),
-			0 0 0 30px rgba($color-beige, 0.2);
-	}
-	100% {
-		box-shadow: 0 0 0 20px rgba($color-yellow-light, 0),
-			0 0 0 30px rgba($color-beige, 0), 0 0 0 40px rgba($color-yellow-light, 0),
-			0 0 0 50px rgba($color-beige, 0);
-	}
+  0% {
+    box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5), 0 0 0 10px rgba($color-beige, 0.4),
+      0 0 0 20px rgba($color-yellow-light, 0.3), 0 0 0 30px rgba($color-beige, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba($color-yellow-light, 0), 0 0 0 30px rgba($color-beige, 0),
+      0 0 0 40px rgba($color-yellow-light, 0), 0 0 0 50px rgba($color-beige, 0);
+  }
 }
 
 // smooth header
 
 @keyframes header {
-	0% {
-		opacity: 0;
-		top: -100px;
-	}
+  0% {
+    opacity: 0;
+    top: -100px;
+  }
 
-	100% {
-		opacity: 1;
-		top: 0;
-	}
+  100% {
+    opacity: 1;
+    top: 0;
+  }
 }
 
 .play-btn {
-	cursor: pointer;
-	color: $color-yellow-light;
-	font-size: 26px;
+  cursor: pointer;
+  color: $color-yellow-light;
+  font-size: 26px;
 }
 
 .header__audio {
-	position: absolute;
-	top: 52px;
-	right: 30px;
+  position: absolute;
+  top: 52px;
+  right: 50px;
+}
+
+// Mobile Menu
+
+.mobile-menu-icon {
+  display: none;
+  font-size: 24px;
+  cursor: pointer;
+  color: rgba($color-black, 0.6);
+
+  .fa-bars,
+	.fa-times {
+    font-size: 40px;
+
+    @media screen and (max-width: $media-480) {
+      font-size: 22px;
+    }
+  }
+}
+
+.mobile-menu {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  padding: 150px 20px;
+  background-color: $color-beige;
+  width: 100%;
+  max-width: 300px;
+  z-index: 999;
+}
+
+.mobile-nav {
+  @include flex-column(40px);
+}
+
+.mobile-nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+
+.mobile-nav__list-link {
+  color: rgb($color-black, 0.6);
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 28px;
+
+  &:hover {
+    @include hover-link;
+  }
+}
+
+.mobile-menu-btn {
+  font-size: 22px;
+  font-weight: 700;
+  padding: 10px 28px;
+  border-radius: 2px;
+  color: $color-blue;
+  background-color: $color-light;
+  transition: color 0.2s ease-in-out, color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: $color-accent;
+    color: $color-light;
+  }
+}
+
+@media screen and (max-width: $media-1200) {
+  .mobile-menu-icon {
+    display: block;
+  }
+
+  .nav__list {
+    display: none;
+  }
+
+  .button-blue,
+  .header__audio,
+  .logo__text-description {
+    display: none;
+  }
+
+	.logo {
+		position: relative;
+		z-index: 1100;
+	}
+}
+
+@media screen and (max-width: $media-768) {
+  .header__inner {
+    padding: 10px 15px;
+  }
+}
+
+@media screen and (max-width: $media-480) {
+  .header__inner {
+    padding: 10px 15px;
+  }
+  .logo__img {
+    width: 48px;
+    height: 48px;
+  }
 }
