--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,4 @@
+@import 'breakpoints';
 @import 'variables';
 @import 'header';
 @import 'hero';
@@ -37,7 +38,5 @@ body {
 .main {
 	flex-grow: 1;
 }
-
-
 
 
