--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -1,6 +1,7 @@
 $media-1440: 1440px;
 $media-1200: 1200px;
 $media-992: 992px;
+$media-855: 885px;
 $media-768: 768px;
 $media-576: 576px;
 $media-480: 480px;
