--- a/styles/partners.scss
+++ b/styles/partners.scss
@@ -1,23 +1,58 @@
 .partners {
-	background-color: $color-light;
+  background-color: $color-light;
+  padding: 30px 130px 106px;
+  display: flex;
+  justify-content: center;
 
-	&__inner {
-		padding: 30px 130px 106px;
-	}
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    max-width: 1400px;
+    width: 100%;
+  }
 
-	&__list {
-		display: flex;
-		align-items: center;
-		gap: 106px;
-	}
+  &__list-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    height: 94px;
+  }
 
-	&__list-item-logo {
-		filter: brightness(0);
-	}
+  &__list-item-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__list-item:nth-child(3),
+  &__list-item:nth-child(6) {
+    border-right: 0;
+  }
 
-	&__inner--copy {
-		padding: 44px 130px 72px;
-	}
+  &__list-item-logo {
+    filter: brightness(0);
+    max-width: 100%;
+    height: auto;
+  }
+
+  @media screen and (max-width: $media-855) {
+    padding: 0 15px 46px 15px;
+  }
+
+  @media (max-width: $media-576) {
+    padding: 0 0 46px 0;
+
+    &__list-item {
+      border-bottom: 1px solid rgba($color-black, 0.1);
+      border-right: 1px solid rgba($color-black, 0.1);
+    }
+
+    &__list {
+      grid-template-columns: repeat(3, minmax(107px, 1fr));
+      gap: 0;
+    }
+  }
+
+  @media screen and (max-width: $media-480) {
+  }
 }
-
-
