--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@
 }
 .mobile-menu-icon .fa-bars,
 .mobile-menu-icon .fa-times {
-  font-size: clamp(22px, 1.2124rem + 0.813vw, 32px);
+  font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
 }
 
 .mobile-menu {
@@ -247,7 +247,7 @@
   .mobile-menu-icon {
     display: block;
     height: 64px;
-    border-left: 1px solid rgba(43, 41, 45, 0.5);
+    border-left: 1px solid rgba(43, 41, 45, 0.6);
   }
   .fa-bars,
   .fa-times {
@@ -283,16 +283,11 @@
   position: relative;
   z-index: 100;
   max-width: 754px;
-  font-size: 80px;
+  font-size: clamp(50px, 2.5694rem + 2.7778vw, 80px);
   font-weight: 700;
   line-height: 1;
   margin-bottom: 14px;
   letter-spacing: -1px;
-}
-@media screen and (max-width: 1440px) {
-  .hero__title {
-    font-size: clamp(50px, 2.6372rem + 2.439vw, 80px);
-  }
 }
 .hero__description {
   max-width: 456px;
@@ -341,6 +336,7 @@
     position: relative;
     width: 100%;
     padding-bottom: 56.2814070352%;
+    opacity: 1;
   }
   .hero__image img {
     position: absolute;
@@ -435,6 +431,12 @@
   max-width: 100%;
   height: auto;
 }
+
+@media screen and (max-width: 1200px) {
+  .partners {
+    padding: 30px 130px 30px;
+  }
+}
 @media screen and (max-width: 885px) {
   .partners {
     padding: 0 15px 46px 15px;
@@ -454,42 +456,42 @@
   }
 }
 .features {
-  background-color: #fff;
   display: flex;
   gap: 125px;
+  background-color: #fff;
   padding: 0 0 102px 130px;
 }
 .features__content {
   position: relative;
 }
 .features__content-subtitle {
-  font-size: 22px;
-  color: #009b4d;
-  font-weight: 700;
-  margin-bottom: 30px;
   display: block;
+  font-size: 22px;
+  font-weight: 700;
+  color: #009b4d;
+  margin-bottom: 30px;
 }
 .features__content-title {
   font-size: 56px;
   font-weight: 700;
   line-height: 1;
   margin-bottom: 30px;
-  font-size: 55px;
+  font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   max-width: 462px;
   margin-bottom: 28px;
 }
 .features__content-description {
+  display: block;
   font-size: 22px;
   max-width: 462px;
-  margin-bottom: 42px;
-  line-height: 1.5;
-  display: block;
   letter-spacing: 0.85px;
+  line-height: 1.5;
+  margin-bottom: 42px;
 }
 .features__content-sub {
-  color: #3142c6;
   font-size: 22px;
   font-weight: 700;
+  color: #3142c6;
   margin-bottom: -16px;
 }
 .features__content-sub::before {
@@ -510,21 +512,21 @@
 .features__content-divider {
   display: block;
   height: 1px;
-  background-color: #2b292d;
   opacity: 0.1;
   width: 100%;
+  background-color: #2b292d;
   margin-bottom: 16px;
 }
 .features__divider--blue {
-  background-color: #3142c6;
   height: 3px;
   opacity: 1;
+  background-color: #3142c6;
 }
 .features__content-info {
+  display: block;
   font-size: 22px;
   font-weight: 700;
   margin-bottom: 22px;
-  display: block;
 }
 .features__content-info:nth-of-type(2):before {
   content: "";
@@ -553,7 +555,48 @@
   top: 258px;
   left: -130px;
 }
+.features__image-caption {
+  display: none;
+  font-size: 14px;
+  color: rgba(43, 41, 45, 0.6);
+}
 
+@media screen and (max-width: 1320px) {
+  .features {
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px 40px;
+  }
+  .features__content-img {
+    display: none;
+  }
+  .features__image-caption {
+    display: block;
+    text-align: center;
+  }
+  .features__image {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 885px) {
+  .features__content-info,
+  .features__content-divider,
+  .features__content-sub,
+  .features__content-text {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .features {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .features__content-description {
+    margin-bottom: 0;
+  }
+}
 .manage {
   display: flex;
   align-items: center;
@@ -935,7 +978,7 @@
 }
 .subscription__text {
   font-size: 14px;
-  color: rgba(43, 41, 45, 0.5);
+  color: rgba(43, 41, 45, 0.6);
 }
 .subscription__link {
   color: #3142c6;
@@ -1149,8 +1192,7 @@ body {
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden;
-  max-width: 1420px;
-  padding: 0 10px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 @media screen and (max-width: 1200px) {
